test/samples/invalid/resolving/tv_with_targs.maruir
fun foo<M;T, U>(arg: T<;U>) {
}
